feat: improve Table loading

--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 .chakra-toast__inner {
-  padding-bottom: 0;
-  margin-bottom: 0;
+  padding-bottom: 0 !important;
+  margin-bottom: 0 !important;
 }
 
 .chakra-form__required-indicator {
